--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .sidebar-navigation .logo img {
-  width: 80px;
+  width: 100px;
 }
 
 .sidebar nav ul {
@@ -43,4 +43,127 @@ body {
   font-weight: 600;
   font-size: 14px;
   font-family: "DM Sans", sans-serif;
+}
+
+.library {
+  background-color: #121212;
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  padding: 4px 8px;
+  color: #b3b3b3;
+  font-weight: 600;
+  font-size: 14px;
+  margin-top: 10px;
+}
+
+.library .library-content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.library .library-content .library-button {
+  display: flex;
+  margin-right: 10px;
+  color: #b3b3b3;
+  background-color: transparent;
+  border: none;
+  font-size: 14px;
+  font-weight: 700;
+  font-family: "DM Sans", sans-serif;
+  text-align: center;
+  text-decoration: none;
+  text-transform: none;
+  padding: 20px 10px;
+}
+
+.library .library-content .library-button .fa {
+  font-size: 20px;
+  margin-right: 10px;
+  font-weight: 300;
+  padding-right: 8px;
+}
+
+.library .library-content .fa-plus {
+  margin: 24px 10px;
+}
+
+.section-playlist {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 20px;
+  background-color: #242424;
+  color: #b3b3b3;
+  font-weight: 600;
+  font-size: 14px;
+  margin: 8px 0;
+  padding: 16px 20px;
+  border-radius: 10px;
+}
+
+.section-playlist .section-playlist-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.section-playlist .section-playlist-content .text {
+  padding-bottom: 14px;
+  color: #fff;
+  font-family: "DM Sans", sans-serif;
+}
+
+.section-playlist .section-playlist-content .title {
+  font-weight: 700;
+}
+
+.section-playlist .section-playlist-content .subtitle {
+  font-weight: 500;
+  font-size: 12px;
+}
+
+.section-playlist .section-playlist-content .section-playlist-button {
+  display: flex;
+  justify-content: center;
+  background-color: #fff;
+  color: #000;
+  border-radius: 20px;
+  font-size: 12px;
+  font-weight: 700;
+  text-decoration: none;
+  padding: 10px;
+  border: none;
+  width: 113px;
+  margin-top: 12px;
+  cursor: pointer;
+}
+
+.library .cookies {
+  margin: 25px 20px;
+}
+
+.library .cookies a {
+  text-decoration: none;
+  color: #b3b3b3;
+  font-weight: 500;
+  font-size: 15px;
+}
+
+.library .cookies a:hover {
+  text-decoration: underline;
+}
+
+.library .languages-button {
+  background-color: transparent;
+  border: 1px solid #878787;
+  color: #fff;
+  cursor: pointer;
+  align-items: center;
+  font-weight: bold;
+  width: 170px;
+  margin: 8px;
+  padding: 8px;
+  border-radius: 20px;
+
 }
