Fixing the grid

--- a/src/styles/main-content.css
+++ b/src/styles/main-content.css
@@ -150,18 +150,19 @@
 /* FIM SCROLL */
 
 .offer__list-item {
-  /* display: grid;
+  display: grid;
   justify-items: center;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 16px;
   gap: 16px;
-  margin-bottom: 16px; */
-
-  /* CODIGO COM JS CALCULANDO OS CARDS POR COLUNA */
-  display: grid;  /* define o modelo de layout do elemento como uma grade */
+  margin-bottom: 16px; 
+  /*
+  CODIGO COM JS CALCULANDO OS CARDS POR COLUNA 
+  display: grid;  /* define o modelo de layout do elemento como uma grade 
   gap: 16px;
-  grid-gap: 32px;  /* não é usado mais */
+  grid-gap: 32px;   não é usado mais 
   margin: 0 auto;
+  */
 }
 
 /* POSITION */
