--- a/src/styles/media-queries.css
+++ b/src/styles/media-queries.css
@@ -5,15 +5,15 @@
     display: none;
   }
 
-  /* .header__login .subscribe {
+  .header__login .subscribe {
     font-size: 12px !important;
     padding: 10px !important;
     margin-right: 5px !important;
-  } */
+  } 
 
-  /* .offer__list-item {
+  .offer__list-item {
     grid-template-columns: 1fr 1fr !important;
-  } */
+  } 
 }
 
 @media screen and (min-width: 1016px) and (max-width: 1140px) {
@@ -23,9 +23,9 @@
     display: none;
   }
 
-  /* .offer__list-item {
+  .offer__list-item {
     grid-template-columns: 1fr 1fr 1fr !important;
-  } */
+  } 
 }
 
 @media screen and (max-width: 375px) {
